solved the overlapping anchor issue

--- a/web/app/themes/jc-theme/assets/styles/layouts/_9-other styles.scss
+++ b/web/app/themes/jc-theme/assets/styles/layouts/_9-other styles.scss
@@ -23,8 +23,5 @@ body#tinymce {
   margin: 30px 0 30px 0;
 }
 
-.parallax {
-  background-position: 0 0;
-}
 
 
