--- a/web/app/themes/jc-theme/assets/styles/layouts/_sections.scss
+++ b/web/app/themes/jc-theme/assets/styles/layouts/_sections.scss
@@ -57,6 +57,8 @@ section.contact {
 section.site-intro {
   margin-top: -5%;
   padding-top: 40px;
+  position: inherit;
+  z-index: 999;
   h3.text-muted {
     margin-top: 30px;
   }
