--- a/web/app/themes/jc-theme/assets/styles/layouts/_toc.scss
+++ b/web/app/themes/jc-theme/assets/styles/layouts/_toc.scss
@@ -1,5 +1,5 @@
 .toc {
-  z-index: 999;
+  z-index: 899;
   position: relative;
   h3 {
     color: $text-color;
